infra/k8s/assets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      containers:
        - name: assets
          image: iandrew/assets
---
apiVersion: v1
kind: Service
metadata:
  name: assets-srv
spec:
  selector:
    app: assets
  ports:
    - name: assets
      protocol: TCP
      port: 3000
      targetPort: 3000
