infra/k8s/assets-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-postgres-depl
spec:
  selector:
    matchLabels:
      app: postgres-depl
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-depl
    spec:
      containers:
        - name: postgres-depl
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-depl-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: assets-postgres-srv
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-depl
  type: ClusterIP
