infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args:
            [
              '-p', '4222',            # NATS client port (default: 4222).
              '-m', '8222',            # HTTP port for monitoring dashboard (exclusive of --https_port).
              '-hbi', '5s',            # Interval at which server sends heartbeat to a client
              '-hbt', '5s',            # How long server waits for a heartbeat response
              '-hbf', '2',             # Number of failed heartbeats before server closes the client connection
                                       # Name of the FT Group. A group can be 2 or more servers with a single active server and all sharing the same datastore
              '-SD',                   # Enable STAN debugging output
              '-cid', 'tickers-app',    # Cluster ID (default: test-cluster)
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
